# hackatom-2022-osmosis-algorithmic-trading-solution

./: .gitignore  README.md  pool_1_daily_candles.parquet  pyproject.toml
frontsie/: package.json
frontsie/counter-dapp/: Beaker.toml
frontsie/counter-dapp/.beaker/: state.json  state.local.json
frontsie/counter-dapp/contracts/counter/: Cargo.toml  NOTICE
frontsie/counter-dapp/contracts/counter/examples/: schema.rs
frontsie/counter-dapp/contracts/counter/src/: contract.rs  msg.rs
frontsie/counter-dapp/frontend/: .env.production  package-lock.json  package.json
frontsie/counter-dapp/frontend/api/: strategy.ts
frontsie/counter-dapp/frontend/pages/: index.tsx  strategy.tsx
frontsie/counter-dapp/frontend/styles/: Home.module.css  globals.css
frontsie/counter-dapp/ts/sdk/: README.md  package.json  typedoc.json
frontsie/counter-dapp/ts/sdk/src/contracts/: CounterContract.ts  index.ts
frontsie/counter-dapp/ts/sdk/types/contracts/: CounterContract.d.ts  CounterContract.d.ts.map  index.d.ts  index.d.ts.map
hackatom_2022/: analyse.ipynb  candlefy.py  store_price.py
