[tool.poetry]
name = "hackatom-2022"
version = "0.1.0"
description = ""
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
web3-ethereum-defi = "^0.10"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
