[tool.poetry]
name = "hackatom-2022"
version = "0.1.0"
description = ""
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
web3-ethereum-defi = "^0.10"
kaleido = "0.2.1"
jupyter = "^1.0.0"
pandas = "^1.4.3"
plotly = "^5.9.0"
matplotlib = "^3.5.2"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
